syntax = "proto3";
package Models;
option go_package = "./;Models";

message UserModel {
  // @inject_tag: json:"uid"
  int32 UserID = 1;
  // @inject_tag: json:"name"
  string Name = 2;
  // @inject_tag: json:"addr"
  string Address = 3;
  // @inject_tag: json:"sex"
  string Sex = 4;
  // @inject_tag: json:"role"
  string Role = 5;
}
